index.html spacing fixed

--- a/static/index.css
+++ b/static/index.css
@@ -5,7 +5,6 @@ body {
 
 /* Top text */
 .heading {
-    margin-top: 5%;
     text-align: center;
     font-size: 300%;
     color: #000000;
